--- a/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/brand.html
@@ -211,7 +211,9 @@
 		</div>
 		<div class="modal-footer">						
 			<button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
-			<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
+			<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭
+
+
 		</div>
 	  </div>
 	</div>
