--- a/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/brand.html
@@ -12,114 +12,15 @@
 	<script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
+	<script type="text/javascript" src="../js/base_pagination.js">  </script>
+	<script type="text/javascript" src="../js/service/brandService.js">  </script>
+	<script type="text/javascript" src="../js/controller/brandController.js">  </script>
+	<script type="text/javascript" src="../js/controller/baseController.js"></script>
 	<!-- 分页组件开始 -->
 	<script src="../plugins/angularjs/pagination.js"></script>
 	<link rel="stylesheet" href="../plugins/angularjs/pagination.css">
 	<!-- 分页组件结束 -->
 
-	<script>
-		var app=angular.module('youyougou', ['pagination']);//定义优优购模块
-		app.controller('brandController' ,function($scope,$http){
-			$scope.selectIds=[];//选中的ID集合
-			$scope.searchEntity={};//定义搜索对象
-			//分页控件配置 : currentPage当前页；totalItems总记录数, itemsPerPage每页记录数，perPageOptions分页选项，onChange当页面变更后自动触发的方法。
-			$scope.paginationConf = {
-				currentPage: 1,
-				totalItems: 10,
-				itemsPerPage: 10,
-				perPageOptions: [10, 20, 30, 40, 50],
-				onChange: function(){
-					$scope.reloadList();//重新加载
-				}
-			};
-			//读取列表数据绑定到表单中
-			$scope.findAll=function(){
-				$http.get('../brand/findAll.do').success(
-						function(response){
-							$scope.list=response;
-						}
-				);
-			};
-			//重新加载列表 数据
-			$scope.reloadList=function(){
-				//切换页码
-				$scope.findPage($scope.paginationConf.currentPage, $scope.paginationConf.itemsPerPage);
-			};
-			//分页
-			$scope.findPage=function(page,rows){
-				$http.get('../brand/findPage.do?page='+page+'&rows='+rows).success(
-						function(response){
-							$scope.list=response.list; //当前页的数据
-							$scope.paginationConf.totalItems=response.total;//更新总记录数
-						}
-				);
-			};
-			//保存
-			$scope.save=function(){
-				var methodName='add';//方法名称
-				if($scope.entity.id!=null){//如果有ID
-					methodName='update';//则执行修改方法
-				}
-				$http.post('../brand/'+ methodName +'.do',$scope.entity ).success(
-						function(response){
-							if(response.success){
-								alert(response.message);
-								//重新查询
-								$scope.reloadList();//重新加载
-							}else{
-								alert(response.message);
-							}
-						}
-				);
-			};
-			//查询实体
-			$scope.findOne=function(id){
-				$http.get('../brand/findOne.do?id='+id).success(
-						function(response){
-							$scope.entity= response;
-						}
-				);
-			};
-			//更新复选
-			$scope.updateSelection = function($event, id) {
-				if($event.target.checked){//如果是被选中,则增加到数组
-					$scope.selectIds.push( id);
-				}else{
-					var idx = $scope.selectIds.indexOf(id);
-					$scope.selectIds.splice(idx, 1);//删除
-				}
-			}
-			//批量删除
-			$scope.delete=function(){
-				//获取选中的复选框
-				$http.get('../brand/delete.do?ids='+$scope.selectIds).success(
-						function(response){
-							if(response.success){
-								alert(response.message);
-								$scope.reloadList();//刷新列表
-							}else {
-								alert(response.message);
-							}
-						}
-				);
-			}
-			//条件查询
-			$scope.search=function(page,rows){
-				$http.post('../brand/search.do?page='+page+"&rows="+rows, $scope.searchEntity).success(
-						function(response){
-							$scope.paginationConf.totalItems=response.total;//总记录数
-							$scope.list=response.list;//给列表变量赋值
-						}
-				);
-			}
-			//刷新列表
-			$scope.reloadList=function(){
-				$scope.search( $scope.paginationConf.currentPage, $scope.paginationConf.itemsPerPage);
-			}
-		});
-
-
-	</script>
 </head>
 <body class="hold-transition skin-red sidebar-mini"
 	  ng-app="youyougou"   ng-controller="brandController" >
