--- a/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/index.html
+++ b/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/index.html
@@ -360,7 +360,7 @@
 				                </a>
 				            </li>							
 							<li id="admin-login">
-				                <a href="typeTemplate.html" target="iframe">
+				                <a href="type_template.html" target="iframe">
 				                    <i class="fa fa-circle-o"></i>模板管理
 				                </a>
 				            </li>
