--- a/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/seller_1.html
+++ b/youyougou-parent/youyougou-manager-web/src/main/webapp/admin/seller_1.html
@@ -45,8 +45,8 @@
                             
                             <div class="box-tools pull-right">
                                 <div class="has-feedback">
-							        公司名称：<input type="text" ng-model="searchEntity1.name"  >
-									店铺名称： <input type="text" ng-model="searchEntity1.nickName"  >
+							        公司名称：<input type="text" ng-model="searchEntity.name"  >
+									店铺名称： <input type="text" ng-model="searchEntity.nickName"  >
 									<button class="btn btn-default" ng-click="reloadList()">查询</button>
                                 </div>
                             </div>
@@ -69,18 +69,18 @@
 			                          </tr>
 			                      </thead>
 			                      <tbody>
-								  <tr ng-repeat="entity in list">
-									  <td><input  type="checkbox"></td>
-									  <td>{{entity.sellerId}}</td>
-									  <td>{{entity.name}}</td>
-									  <td>{{entity.nickName}}</td>
-									  <td>{{entity.linkmanName}}</td>
-									  <td>{{entity.telephone}}</td>
-									  <td class="text-center">
-										  <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#sellerModal"
-												  ng-click="findOne(entity.sellerId)">详情</button>
-									  </td>
-								  </tr>
+									  <tr ng-repeat="entity in list">
+										  <td><input  type="checkbox"></td>
+										  <td>{{entity.sellerId}}</td>
+										  <td>{{entity.name}}</td>
+										  <td>{{entity.nickName}}</td>
+										  <td>{{entity.linkmanName}}</td>
+										  <td>{{entity.telephone}}</td>
+										  <td class="text-center">
+											  <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#sellerModal"
+													  ng-click="findOne(entity.sellerId)">详情</button>
+										  </td>
+									  </tr>
 			                      </tbody>
 			                  </table>
 			                  <!--数据列表/-->
