--- a/youyougou-parent/youyougou-search-web/src/main/webapp/search.html
+++ b/youyougou-parent/youyougou-search-web/src/main/webapp/search.html
@@ -18,7 +18,7 @@
 		<script src="/js/controller/searchController.js"></script>
 	</head>
 
-	<body ng-app="youyougou" ng-controller="searchController">
+	<body ng-app="youyougou" ng-controller="searchController" ng-init="loadkeywords()">
 		<!-- 头部栏位 -->
 		<!--页面顶部-->
 		<div id="nav-bottom">
@@ -82,7 +82,7 @@
 										<!--searchAutoComplete-->
 										<div class="input-append">
 											<input type="text" ng-model="searchMap.keywords" id="autocomplete" type="text" class="input-error input-xxlarge" />
-											<button class="sui-btn btn-xlarge btn-danger" ng-click="search()" type="button">搜索</button>
+											<button class="sui-btn btn-xlarge btn-danger" ng-click="searchMap.pageNo=1;search()" type="button">搜索</button>
 										</div>
 									</form>
 								</div>
@@ -157,6 +157,8 @@
 					<li class="tag" ng-if="searchMap.category!=''" ng-click="removeSearchItem('category')">商品分类：{{searchMap.category}}<i class="sui-icon icon-tb-close"></i></li>
 					<li class="tag" ng-if="searchMap.brand!=''" ng-click="removeSearchItem('brand')">品牌：{{searchMap.brand}}<i class="sui-icon icon-tb-close"></i></li>
 					<li class="tag" ng-repeat="(key,value) in searchMap.spec" ng-click="removeSearchItem(key)">{{key}}:{{value}}<i class="sui-icon icon-tb-close"></i></li>
+					<li class="tag" ng-if="searchMap.price!=''" ng-click="removeSearchItem('price')">价格：{{searchMap.price}}<i  class="sui-icon icon-tb-close"></i></li>
+					搜索结果：{{resultMap.total}}条记录
 				</ul>
 				<!--<form class="fl sui-form form-dark">
 					<div class="input-control control-right">
@@ -168,20 +170,20 @@
 			</div>
 			<!--selector-->
 			<div class="clearfix selector">
-				<div class="type-wrap" ng-if="list.categoryList!=null && searchMap.category==''">
+				<div class="type-wrap" ng-if="resultMap.categoryList!=null && searchMap.category==''">
 					<div class="fl key">商品分类</div>
 					<div class="fl value">
-                        <span ng-repeat="category in list.categoryList">
+                        <span ng-repeat="category in resultMap.categoryList">
 						    <a href="#" ng-click="addSearchItem('category',category)">{{category}}</a>
                         </span>
 					</div>
 					<div class="fl ext"></div>
 				</div>
-				<div class="type-wrap logo" ng-if="list.brandList!=null && searchMap.brand==''">
+				<div class="type-wrap logo" ng-if="resultMap.brandList!=null && searchMap.brand=='' && keywordsIsBrand()==false">
 					<div class="fl key brand">品牌</div>
 					<div class="value logos">
 						<ul class="logo-list">
-							<li ng-repeat="brand in list.brandList">
+							<li ng-repeat="brand in resultMap.brandList">
 								<a href="#" ng-click="addSearchItem('brand',brand.text)">{{brand.text}}</a>
 							</li>
 						</ul>
@@ -191,7 +193,7 @@
 						<a href="javascript:void(0);">更多</a>
 					</div>
 				</div>
-				<div class="type-wrap" ng-repeat="spec in list.specList" ng-if="searchMap.spec[spec.text]==null">
+				<div class="type-wrap" ng-repeat="spec in resultMap.specList" ng-if="searchMap.spec[spec.text]==null">
 					<div class="fl key">{{spec.text}}</div>
 					<div class="fl value">
 						<ul class="type-list">
@@ -239,27 +241,27 @@
 					</div>
 					<div class="fl ext"></div>
 				</div>
-				<div class="type-wrap">
+				<div class="type-wrap" ng-if="searchMap.price==''">
 					<div class="fl key">价格</div>
 					<div class="fl value">
 						<ul class="type-list">
 							<li>
-								<a>0-500元</a>
+								<a ng-click="addSearchItem('price','0-500')">0-500元</a>
 							</li>
 							<li>
-								<a>500-1000元</a>
+								<a ng-click="addSearchItem('price','500-1000')">500-1000元</a>
 							</li>
 							<li>
-								<a>1000-1500元</a>
+								<a ng-click="addSearchItem('price','1000-1500')">1000-1500元</a>
 							</li>
 							<li>
-								<a>1500-2000元</a>
+								<a ng-click="addSearchItem('price','1500-2000')">1500-2000元</a>
 							</li>
 							<li>
-								<a>2000-3000元 </a>
+								<a ng-click="addSearchItem('price','2000-3000')">2000-3000元 </a>
 							</li>
 							<li>
-								<a>3000元以上</a>
+								<a ng-click="addSearchItem('price','3000-*')">3000元以上</a>
 							</li>
 						</ul>
 					</div>
@@ -297,26 +299,29 @@
 					<div class="navbar-inner filter">
 						<ul class="sui-nav">
 							<li class="active">
-								<a href="#">综合</a>
+								<a href="#" ng-click="sortSearch('','')">综合</a>
 							</li>
 							<li>
 								<a href="#">销量</a>
 							</li>
 							<li>
-								<a href="#">新品</a>
+								<a href="#" ng-click="sortSearch('updatetime','DESC')">新品</a>
 							</li>
 							<li>
 								<a href="#">评价</a>
 							</li>
 							<li>
-								<a href="#">价格</a>
+								<a href="#" ng-click="sortSearch('price','ASC')">价格↑</a>
+							</li>
+							<li>
+								<a href="#" ng-click="sortSearch('price','DESC')">价格↓</a>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="goods-list">
 					<ul class="yui3-g">
-						<li class="yui3-u-1-5" ng-repeat="item in list.rows">
+						<li class="yui3-u-1-5" ng-repeat="item in resultMap.rows">
 							<div class="list-wrap">
 								<div class="p-img">
 									<a href="item.html" target="_blank"><img ng-src="{{item.image}}"  /></a>
@@ -349,33 +354,22 @@
 				<div class="fr page">
 					<div class="sui-pagination pagination-large">
 						<ul>
-							<li class="prev disabled">
-								<a href="#">«上一页</a>
+							<li class="prev {{isTopPage()?'disabled':''}}">
+								<a href="#" ng-click="queryByPage(searchMap.pageNo-1)">«</a>
 							</li>
-							<li class="active">
-								<a href="#">1</a>
+							<li class="dotted" ng-if="firstDot==true"><span>...</span></li>
+							<li class="active" ng-repeat="p in pageLabel">
+								<a href="#" ng-click="queryByPage(p)">{{p}}</a>
 							</li>
-							<li>
-								<a href="#">2</a>
-							</li>
-							<li>
-								<a href="#">3</a>
-							</li>
-							<li>
-								<a href="#">4</a>
-							</li>
-							<li>
-								<a href="#">5</a>
-							</li>
-							<li class="dotted"><span>...</span></li>
-							<li class="next">
-								<a href="#">下一页»</a>
+							<li class="dotted" ng-if="lastDot==true"><span>...</span></li>
+							<li class="next {{isEndPage()?'disabled':''}}">
+								<a href="#" ng-click="queryByPage(searchMap.pageNo+1)">»</a>
 							</li>
 						</ul>
-						<div><span>共10页&nbsp;</span><span>
+						<div><span>&nbsp;共{{resultMap.totalPages}}页&nbsp;</span><span>
       到第
-      <input type="text" class="page-num">
-      页 <button class="page-confirm" onclick="alert(1)">确定</button></span></div>
+      <input type="text" class="page-num" ng-model="searchMap.pageNo" style="max-width: 25px;">
+      页 <button class="page-confirm" ng-click="queryByPage(searchMap.pageNo)">确定</button></span></div>
 					</div>
 				</div>
 			</div>
